--- a/index.html
+++ b/index.html
@@ -1,22 +1,115 @@
+
 <html>
 <head>
     <title>Testes</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/4.5.1/pixi.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-json/2.6.0/jquery.json.min.js"></script>
-    <script src="main.js"></script>
     <style>
-        .selected-button{
-            background-color: red;
+    html, body {
+  width:  100%;
+  height: 100%;
+  margin: 0;
+}
+    </style>
+    <script>
+            name_label_css = {fontFamily : 'Arial', fontSize: 10, fill : 0xffffff, align : 'center'};
+            coeficient_label_css = {fontFamily : 'Arial', fontSize: 8, fill : 0xfff, align : 'center'}
+            running = true;
+
+            $(document).ready(function(){
+                const app = new PIXI.Application({autoResize: true,resolution: devicePixelRatio});
+                const renderer = app.renderer;
+                const stage = app.stage;
+                const objects = new PIXI.Container();
+                const pixelConst = 37.7952755906;
+
+                var multiplicador = $("#multiplicador").val();
+                var calor = $("#calor").val();
+                var tempo = (multiplicador * 10000000)
+
+                // Retâgulo
+                class Material {
+                    constructor(nome, coeficiente, comprimento, cor){
+                        this.nome = nome;
+                        this.comprimento = comprimento;
+                        this.coeficiente = coeficiente;
+                        this.cor = cor;
+                        this.temperatura = 0;
+                        this.temperatura_inicial = 0;
+                        this.calorEspecifico = 30;
+                        this.object = gerar_objeto(comprimento, cor, nome, coeficiente);
+                    }
+
+                    calcularDilatacao(temperatura, tempo){
+                        return (this.comprimento * this.coefiente) (temperatura0, temperatura);
+                    }
+                }
+
+                function gerar_objeto(comprimento, cor, nome, coeficiente){
+                    name_text = new PIXI.Text(nome, name_label_css);
+                    coeficient_text = new PIXI.Text(coeficiente, coeficient_label_css);
+                    object = new PIXI.Graphics();
+                    object.interactive = true;
+                    object.beginFill(cor);
+                    object.drawRect(0,0,comprimento, 50);
+                    object.addChild(name_text);
+                    name_text.anchor.set(-0.4);
+                    coeficient_text.anchor.set(0.9);
+                    object.addChild(coeficient_text);
+                    object.endFill();
+                    return object;
+                }
+
+                aluminio = new Material("Aluminio", 0.00006, 300, 0xFFF);
+                aluminio.temperatura = 0;
+                cobre = new Material("Cobre", 0.9, 145, 0x250025);
+                cobre.object.position.set(00, 50);
+
+                document.body.appendChild(app.view);
+                app.stage.addChild(aluminio.object);
+                app.stage.addChild(cobre.object);
+
+
+                function aquecimento(material, temperatura_final){
+                    if (!running){
+                        setTimeout(function(){aquecimento(material, temperatura_final)}, 1000);   
+                        return;
+                    }
+                    calor++;
+                    temperatura_inicial = material.temperatura;
+                    material.temperatura += calor/material.calorEspecifico;
+                    console.log("Temperatura:"+material.temperatura);
+
+                    if (material.temperatura < temperatura_final){
+                        setTimeout(function(){aquecimento(material, temperatura_final)}, 1000);   
+                    }
+
+                    deltaTemp = (material.temperatura - material.temperatura_inicial);
+                    deformacao = material.comprimento * material.coeficiente * deltaTemp;
+                    console.log(deformacao);
+                    console.log("Como deformar: " + (deformacao * pixelConst));
+
+                    material.object.scale.x += deformacao;
+                }
+
+                setTimeout(function(){aquecimento(aluminio, 1000)}, 1000);
+            })
+            .on("keydown", function(e){if (e.key == "h"){running = !running}});
+            
+        
+    </script>
+    <style>
+        canvas{
+            width: 100%;
+            height: auto;
         }
     </style>
 </head>
 <body>
-        <div id="materiais" style="position: absolute">
-        </div> 
-
-        <div id="log">
-        </div>
+            <input id="calor" type="number" value=30/>
+            <span>Alumínio</span>
+            <input id="multiplicador" type="number" value=0.1/>
 </body>
 </html>
 
