--- a/index.html
+++ b/index.html
@@ -51,9 +51,13 @@
                         <input placeholder="Comprimento" class="white-text center" id="custom-length" value=200 type="number">
                         <label for="custom-length" class="white-text center">Comprimento</label>
                     </div>
+                    <!-- <div class="input-field col center">
+                            <input placeholder="Temperatura inicial" class="white-text center" id="custom-length" value=0 type="number">
+                            <label for="custom-length" class="white-text center">Temperatura inicial</label>
+                        </div>                     -->
                 </div>
                 <div class="col s1">
-                    <a class="btn-floating btn-large waves-effect waves-light teal"><i class="material-icons">add</i></a>
+                    <a id="add-custom" class="btn-floating btn-large waves-effect waves-light teal"><i class="material-icons">add</i></a>
                 </div>
             </div>    
         </div>
