--- a/calculadora.html
+++ b/calculadora.html
@@ -112,7 +112,7 @@
                 </div>
                 <div class="col-md-2 mb-2">
                     <label for="vol-ftemp">Sólido?</label>
-                    <input class="form-check-input" type="checkbox" checked id="vol-solido">
+                  <p><input class="form-check-input" type="checkbox" checked id="vol-solido"></p>
                 </div>              
                
                 <button id="vol-calc" type="button" class="btn btn-light">=</button> 
