--- a/calculadora.html
+++ b/calculadora.html
@@ -110,9 +110,9 @@
                     <label for="vol-ftemp">Temperatura final</label>
                     <input type="text" class="form-control" id="vol-ftemp" placeholder="T Final" value="" required>
                 </div>
-                <div class="col-md-2 mb-2">
+                <div class="col-md-4 mb-4">
                     <label for="vol-ftemp">Sólido?</label>
-                  <p><input class="form-check-input" type="checkbox" checked id="vol-solido"></p>
+                  <p class="text-center"><input class="form-check-input" type="checkbox" checked id="vol-solido"></p>
                 </div>              
                
                 <button id="vol-calc" type="button" class="btn btn-light">=</button> 
