--- a/calculadora.html
+++ b/calculadora.html
@@ -112,7 +112,7 @@
                 </div>
                 <div class="col-md-4 mb-4">
                     <label for="vol-ftemp">Sólido?</label>
-                  <p class="text-center"><input class="form-check-input" type="checkbox" checked id="vol-solido"></p>
+                  <p><input class="form-check-input" type="checkbox" checked id="vol-solido"></p>
                 </div>              
                
                 <button id="vol-calc" type="button" class="btn btn-light">=</button> 
