--- a/calculadora.html
+++ b/calculadora.html
@@ -38,7 +38,7 @@
   </div>
 
   <div class="row">
-    <div class="col-md-8 order-md-1">
+    <div class="col-md-12 order-md-1">
       <h4 class="mb-3">Dilatação linear <span><h6>ΔL = L0.α.Δθ</h6></span></h4>
       <form class="needs-validation" novalidate>
         <div class="row">
@@ -111,7 +111,7 @@
                     <input type="text" class="form-control" id="vol-ftemp" placeholder="T Final" value="" required>
                 </div>
                 <div class="col-md-4 mb-4">
-                    <label for="vol-ftemp">Sólido?</label>
+                    <label for="vol-ftemp" class="text-center">Sólido?</label>
                   <p><input class="form-check-input" type="checkbox" checked id="vol-solido"></p>
                 </div>              
                
