--- a/calculadora.html
+++ b/calculadora.html
@@ -95,7 +95,7 @@
           <form class="needs-validation" novalidate>
             <div class="row">
               <div class="col-md-2">
-                <label for="vol-cinicial">Comprimento inicial</label>
+                <label for="vol-cinicial">Volume inicial</label>
                 <input type="text" class="form-control" id="vol-cinicial" placeholder="V0" value="" required>
               </div>
               <div class="col-md-2 mb-2">
